lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instruction instructions
Rule 3     instruction -> block
Rule 4     instruction -> conditional
Rule 5     instruction -> loop
Rule 6     instruction -> statement ;
Rule 7     instruction -> error ;
Rule 8     statement -> assignment
Rule 9     statement -> flow_keyword
Rule 10    statement -> return
Rule 11    statement -> print
Rule 12    flow_keyword -> BREAK
Rule 13    flow_keyword -> CONTINUE
Rule 14    expression -> comparison_expression
Rule 15    expression -> numeric_expression
Rule 16    block -> { instructions }
Rule 17    block -> { error }
Rule 18    print -> PRINT print_body
Rule 19    print_body -> string
Rule 20    print_body -> expression
Rule 21    print_body -> string , print_body
Rule 22    print_body -> expression , print_body
Rule 23    return -> RETURN expression
Rule 24    return -> RETURN
Rule 25    string -> STRING
Rule 26    vector -> [ vector_body ]
Rule 27    vector -> [ ]
Rule 28    vector_body -> numeric_expression
Rule 29    vector_body -> vector_body , numeric_expression
Rule 30    matrix -> [ matrix_body ]
Rule 31    matrix -> [ ]
Rule 32    matrix_body -> vector
Rule 33    matrix_body -> matrix_body , vector
Rule 34    array_range -> var [ expression , expression ]
Rule 35    fun -> fun_name ( numeric_expression )
Rule 36    fun -> fun_name ( error )
Rule 37    fun_name -> ZEROS
Rule 38    fun_name -> ONES
Rule 39    fun_name -> EYE
Rule 40    loop -> while
Rule 41    loop -> for
Rule 42    while -> WHILE ( expression ) instruction
Rule 43    for -> FOR ID = numeric_expression : numeric_expression instruction
Rule 44    conditional -> IF ( expression ) instruction
Rule 45    conditional -> IF ( expression ) instruction ELSE instruction
Rule 46    assignment_lhs -> var
Rule 47    assignment_lhs -> array_range
Rule 48    assignment -> assignment_lhs assignment_operator expression
Rule 49    assignment -> assignment_lhs = string
Rule 50    assignment_operator -> =
Rule 51    assignment_operator -> ADDASSIGN
Rule 52    assignment_operator -> SUBASSIGN
Rule 53    assignment_operator -> MULASSIGN
Rule 54    assignment_operator -> DIVASSIGN
Rule 55    var -> ID
Rule 56    var -> var [ numeric_expression ]
Rule 57    num -> INTNUM
Rule 58    num -> FLOAT
Rule 59    num -> var
Rule 60    unary_op -> negation
Rule 61    unary_op -> transposition
Rule 62    negation -> - numeric_expression
Rule 63    transposition -> numeric_expression '
Rule 64    numeric_expression -> num
Rule 65    numeric_expression -> matrix
Rule 66    numeric_expression -> unary_op
Rule 67    numeric_expression -> fun
Rule 68    numeric_expression -> ( numeric_expression )
Rule 69    numeric_expression -> numeric_expression + numeric_expression
Rule 70    numeric_expression -> numeric_expression - numeric_expression
Rule 71    numeric_expression -> numeric_expression * numeric_expression
Rule 72    numeric_expression -> numeric_expression / numeric_expression
Rule 73    numeric_expression -> numeric_expression DOTADD numeric_expression
Rule 74    numeric_expression -> numeric_expression DOTSUB numeric_expression
Rule 75    numeric_expression -> numeric_expression DOTMUL numeric_expression
Rule 76    numeric_expression -> numeric_expression DOTDIV numeric_expression
Rule 77    comparison_expression -> numeric_expression LT numeric_expression
Rule 78    comparison_expression -> numeric_expression GT numeric_expression
Rule 79    comparison_expression -> numeric_expression EQ numeric_expression
Rule 80    comparison_expression -> numeric_expression NE numeric_expression
Rule 81    comparison_expression -> numeric_expression GE numeric_expression
Rule 82    comparison_expression -> numeric_expression LE numeric_expression
Rule 83    comparison_expression -> ( comparison_expression )

Terminals, with rules where they appear

'                    : 63
(                    : 35 36 42 44 45 68 83
)                    : 35 36 42 44 45 68 83
*                    : 71
+                    : 69
,                    : 21 22 29 33 34
-                    : 62 70
/                    : 72
:                    : 43
;                    : 6 7
=                    : 43 49 50
ADDASSIGN            : 51
BREAK                : 12
CONTINUE             : 13
DIVASSIGN            : 54
DOTADD               : 73
DOTDIV               : 76
DOTMUL               : 75
DOTSUB               : 74
ELSE                 : 45
EQ                   : 79
EYE                  : 39
FLOAT                : 58
FOR                  : 43
GE                   : 81
GT                   : 78
ID                   : 43 55
IF                   : 44 45
INTNUM               : 57
LE                   : 82
LT                   : 77
MULASSIGN            : 53
NE                   : 80
ONES                 : 38
PRINT                : 18
RETURN               : 23 24
STRING               : 25
SUBASSIGN            : 52
UMINUS               : 
WHILE                : 42
ZEROS                : 37
[                    : 26 27 30 31 34 56
]                    : 26 27 30 31 34 56
error                : 7 17 36
{                    : 16 17
}                    : 16 17

Nonterminals, with rules where they appear

array_range          : 47
assignment           : 8
assignment_lhs       : 48 49
assignment_operator  : 48
block                : 3
comparison_expression : 14 83
conditional          : 4
expression           : 20 22 23 34 34 42 44 45 48
flow_keyword         : 9
for                  : 41
fun                  : 67
fun_name             : 35 36
instruction          : 1 2 42 43 44 45 45
instructions         : 2 16 0
loop                 : 5
matrix               : 65
matrix_body          : 30 33
negation             : 60
num                  : 64
numeric_expression   : 15 28 29 35 43 43 56 62 63 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82
print                : 11
print_body           : 18 21 22
return               : 10
statement            : 6
string               : 19 21 49
transposition        : 61
unary_op             : 66
var                  : 34 46 56 59
vector               : 32 33
vector_body          : 26 29
while                : 40

Parsing method: LALR

state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (16) block -> . { instructions }
    (17) block -> . { error }
    (44) conditional -> . IF ( expression ) instruction
    (45) conditional -> . IF ( expression ) instruction ELSE instruction
    (40) loop -> . while
    (41) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . return
    (11) statement -> . print
    (42) while -> . WHILE ( expression ) instruction
    (43) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (48) assignment -> . assignment_lhs assignment_operator expression
    (49) assignment -> . assignment_lhs = string
    (12) flow_keyword -> . BREAK
    (13) flow_keyword -> . CONTINUE
    (23) return -> . RETURN expression
    (24) return -> . RETURN
    (18) print -> . PRINT print_body
    (46) assignment_lhs -> . var
    (47) assignment_lhs -> . array_range
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (34) array_range -> . var [ expression , expression ]

    error           shift and go to state 7
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_lhs                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 1

    (0) S' -> instructions .



state 2

    (1) instructions -> instruction .
    (2) instructions -> instruction . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (16) block -> . { instructions }
    (17) block -> . { error }
    (44) conditional -> . IF ( expression ) instruction
    (45) conditional -> . IF ( expression ) instruction ELSE instruction
    (40) loop -> . while
    (41) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . return
    (11) statement -> . print
    (42) while -> . WHILE ( expression ) instruction
    (43) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (48) assignment -> . assignment_lhs assignment_operator expression
    (49) assignment -> . assignment_lhs = string
    (12) flow_keyword -> . BREAK
    (13) flow_keyword -> . CONTINUE
    (23) return -> . RETURN expression
    (24) return -> . RETURN
    (18) print -> . PRINT print_body
    (46) assignment_lhs -> . var
    (47) assignment_lhs -> . array_range
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (34) array_range -> . var [ expression , expression ]

    $end            reduce using rule 1 (instructions -> instruction .)
    }               reduce using rule 1 (instructions -> instruction .)
    error           shift and go to state 7
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instruction                    shift and go to state 2
    instructions                   shift and go to state 26
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_lhs                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 3

    (3) instruction -> block .

    error           reduce using rule 3 (instruction -> block .)
    {               reduce using rule 3 (instruction -> block .)
    IF              reduce using rule 3 (instruction -> block .)
    WHILE           reduce using rule 3 (instruction -> block .)
    FOR             reduce using rule 3 (instruction -> block .)
    BREAK           reduce using rule 3 (instruction -> block .)
    CONTINUE        reduce using rule 3 (instruction -> block .)
    RETURN          reduce using rule 3 (instruction -> block .)
    PRINT           reduce using rule 3 (instruction -> block .)
    ID              reduce using rule 3 (instruction -> block .)
    $end            reduce using rule 3 (instruction -> block .)
    }               reduce using rule 3 (instruction -> block .)
    ELSE            reduce using rule 3 (instruction -> block .)


state 4

    (4) instruction -> conditional .

    error           reduce using rule 4 (instruction -> conditional .)
    {               reduce using rule 4 (instruction -> conditional .)
    IF              reduce using rule 4 (instruction -> conditional .)
    WHILE           reduce using rule 4 (instruction -> conditional .)
    FOR             reduce using rule 4 (instruction -> conditional .)
    BREAK           reduce using rule 4 (instruction -> conditional .)
    CONTINUE        reduce using rule 4 (instruction -> conditional .)
    RETURN          reduce using rule 4 (instruction -> conditional .)
    PRINT           reduce using rule 4 (instruction -> conditional .)
    ID              reduce using rule 4 (instruction -> conditional .)
    $end            reduce using rule 4 (instruction -> conditional .)
    }               reduce using rule 4 (instruction -> conditional .)
    ELSE            reduce using rule 4 (instruction -> conditional .)


state 5

    (5) instruction -> loop .

    error           reduce using rule 5 (instruction -> loop .)
    {               reduce using rule 5 (instruction -> loop .)
    IF              reduce using rule 5 (instruction -> loop .)
    WHILE           reduce using rule 5 (instruction -> loop .)
    FOR             reduce using rule 5 (instruction -> loop .)
    BREAK           reduce using rule 5 (instruction -> loop .)
    CONTINUE        reduce using rule 5 (instruction -> loop .)
    RETURN          reduce using rule 5 (instruction -> loop .)
    PRINT           reduce using rule 5 (instruction -> loop .)
    ID              reduce using rule 5 (instruction -> loop .)
    $end            reduce using rule 5 (instruction -> loop .)
    }               reduce using rule 5 (instruction -> loop .)
    ELSE            reduce using rule 5 (instruction -> loop .)


state 6

    (6) instruction -> statement . ;

    ;               shift and go to state 27


state 7

    (7) instruction -> error . ;

    ;               shift and go to state 28


state 8

    (16) block -> { . instructions }
    (17) block -> { . error }
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement ;
    (7) instruction -> . error ;
    (16) block -> . { instructions }
    (17) block -> . { error }
    (44) conditional -> . IF ( expression ) instruction
    (45) conditional -> . IF ( expression ) instruction ELSE instruction
    (40) loop -> . while
    (41) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . return
    (11) statement -> . print
    (42) while -> . WHILE ( expression ) instruction
    (43) for -> . FOR ID = numeric_expression : numeric_expression instruction
    (48) assignment -> . assignment_lhs assignment_operator expression
    (49) assignment -> . assignment_lhs = string
    (12) flow_keyword -> . BREAK
    (13) flow_keyword -> . CONTINUE
    (23) return -> . RETURN expression
    (24) return -> . RETURN
    (18) print -> . PRINT print_body
    (46) assignment_lhs -> . var
    (47) assignment_lhs -> . array_range
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (34) array_range -> . var [ expression , expression ]

    error           shift and go to state 30
    {               shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 16
    FOR             shift and go to state 17
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21
    RETURN          shift and go to state 22
    PRINT           shift and go to state 23
    ID              shift and go to state 18

    instructions                   shift and go to state 29
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    return                         shift and go to state 14
    print                          shift and go to state 15
    assignment_lhs                 shift and go to state 19
    var                            shift and go to state 24
    array_range                    shift and go to state 25

state 9

    (44) conditional -> IF . ( expression ) instruction
    (45) conditional -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 31


state 10

    (40) loop -> while .

    error           reduce using rule 40 (loop -> while .)
    {               reduce using rule 40 (loop -> while .)
    IF              reduce using rule 40 (loop -> while .)
    WHILE           reduce using rule 40 (loop -> while .)
    FOR             reduce using rule 40 (loop -> while .)
    BREAK           reduce using rule 40 (loop -> while .)
    CONTINUE        reduce using rule 40 (loop -> while .)
    RETURN          reduce using rule 40 (loop -> while .)
    PRINT           reduce using rule 40 (loop -> while .)
    ID              reduce using rule 40 (loop -> while .)
    $end            reduce using rule 40 (loop -> while .)
    }               reduce using rule 40 (loop -> while .)
    ELSE            reduce using rule 40 (loop -> while .)


state 11

    (41) loop -> for .

    error           reduce using rule 41 (loop -> for .)
    {               reduce using rule 41 (loop -> for .)
    IF              reduce using rule 41 (loop -> for .)
    WHILE           reduce using rule 41 (loop -> for .)
    FOR             reduce using rule 41 (loop -> for .)
    BREAK           reduce using rule 41 (loop -> for .)
    CONTINUE        reduce using rule 41 (loop -> for .)
    RETURN          reduce using rule 41 (loop -> for .)
    PRINT           reduce using rule 41 (loop -> for .)
    ID              reduce using rule 41 (loop -> for .)
    $end            reduce using rule 41 (loop -> for .)
    }               reduce using rule 41 (loop -> for .)
    ELSE            reduce using rule 41 (loop -> for .)


state 12

    (8) statement -> assignment .

    ;               reduce using rule 8 (statement -> assignment .)


state 13

    (9) statement -> flow_keyword .

    ;               reduce using rule 9 (statement -> flow_keyword .)


state 14

    (10) statement -> return .

    ;               reduce using rule 10 (statement -> return .)


state 15

    (11) statement -> print .

    ;               reduce using rule 11 (statement -> print .)


state 16

    (42) while -> WHILE . ( expression ) instruction

    (               shift and go to state 32


state 17

    (43) for -> FOR . ID = numeric_expression : numeric_expression instruction

    ID              shift and go to state 33


state 18

    (55) var -> ID .

    [               reduce using rule 55 (var -> ID .)
    =               reduce using rule 55 (var -> ID .)
    ADDASSIGN       reduce using rule 55 (var -> ID .)
    SUBASSIGN       reduce using rule 55 (var -> ID .)
    MULASSIGN       reduce using rule 55 (var -> ID .)
    DIVASSIGN       reduce using rule 55 (var -> ID .)
    LT              reduce using rule 55 (var -> ID .)
    GT              reduce using rule 55 (var -> ID .)
    EQ              reduce using rule 55 (var -> ID .)
    NE              reduce using rule 55 (var -> ID .)
    GE              reduce using rule 55 (var -> ID .)
    LE              reduce using rule 55 (var -> ID .)
    +               reduce using rule 55 (var -> ID .)
    -               reduce using rule 55 (var -> ID .)
    *               reduce using rule 55 (var -> ID .)
    /               reduce using rule 55 (var -> ID .)
    DOTADD          reduce using rule 55 (var -> ID .)
    DOTSUB          reduce using rule 55 (var -> ID .)
    DOTMUL          reduce using rule 55 (var -> ID .)
    DOTDIV          reduce using rule 55 (var -> ID .)
    '               reduce using rule 55 (var -> ID .)
    ;               reduce using rule 55 (var -> ID .)
    ,               reduce using rule 55 (var -> ID .)
    )               reduce using rule 55 (var -> ID .)
    ]               reduce using rule 55 (var -> ID .)
    :               reduce using rule 55 (var -> ID .)
    error           reduce using rule 55 (var -> ID .)
    {               reduce using rule 55 (var -> ID .)
    IF              reduce using rule 55 (var -> ID .)
    WHILE           reduce using rule 55 (var -> ID .)
    FOR             reduce using rule 55 (var -> ID .)
    BREAK           reduce using rule 55 (var -> ID .)
    CONTINUE        reduce using rule 55 (var -> ID .)
    RETURN          reduce using rule 55 (var -> ID .)
    PRINT           reduce using rule 55 (var -> ID .)
    ID              reduce using rule 55 (var -> ID .)


state 19

    (48) assignment -> assignment_lhs . assignment_operator expression
    (49) assignment -> assignment_lhs . = string
    (50) assignment_operator -> . =
    (51) assignment_operator -> . ADDASSIGN
    (52) assignment_operator -> . SUBASSIGN
    (53) assignment_operator -> . MULASSIGN
    (54) assignment_operator -> . DIVASSIGN

    =               shift and go to state 35
    ADDASSIGN       shift and go to state 36
    SUBASSIGN       shift and go to state 37
    MULASSIGN       shift and go to state 38
    DIVASSIGN       shift and go to state 39

    assignment_operator            shift and go to state 34

state 20

    (12) flow_keyword -> BREAK .

    ;               reduce using rule 12 (flow_keyword -> BREAK .)


state 21

    (13) flow_keyword -> CONTINUE .

    ;               reduce using rule 13 (flow_keyword -> CONTINUE .)


state 22

    (23) return -> RETURN . expression
    (24) return -> RETURN .
    (14) expression -> . comparison_expression
    (15) expression -> . numeric_expression
    (77) comparison_expression -> . numeric_expression LT numeric_expression
    (78) comparison_expression -> . numeric_expression GT numeric_expression
    (79) comparison_expression -> . numeric_expression EQ numeric_expression
    (80) comparison_expression -> . numeric_expression NE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . numeric_expression LE numeric_expression
    (83) comparison_expression -> . ( comparison_expression )
    (64) numeric_expression -> . num
    (65) numeric_expression -> . matrix
    (66) numeric_expression -> . unary_op
    (67) numeric_expression -> . fun
    (68) numeric_expression -> . ( numeric_expression )
    (69) numeric_expression -> . numeric_expression + numeric_expression
    (70) numeric_expression -> . numeric_expression - numeric_expression
    (71) numeric_expression -> . numeric_expression * numeric_expression
    (72) numeric_expression -> . numeric_expression / numeric_expression
    (73) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (74) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (75) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (76) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (57) num -> . INTNUM
    (58) num -> . FLOAT
    (59) num -> . var
    (30) matrix -> . [ matrix_body ]
    (31) matrix -> . [ ]
    (60) unary_op -> . negation
    (61) unary_op -> . transposition
    (35) fun -> . fun_name ( numeric_expression )
    (36) fun -> . fun_name ( error )
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (62) negation -> . - numeric_expression
    (63) transposition -> . numeric_expression '
    (37) fun_name -> . ZEROS
    (38) fun_name -> . ONES
    (39) fun_name -> . EYE

    ;               reduce using rule 24 (return -> RETURN .)
    (               shift and go to state 43
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 50
    [               shift and go to state 52
    ID              shift and go to state 18
    -               shift and go to state 48
    ZEROS           shift and go to state 56
    ONES            shift and go to state 57
    EYE             shift and go to state 58

    expression                     shift and go to state 40
    comparison_expression          shift and go to state 41
    numeric_expression             shift and go to state 42
    num                            shift and go to state 44
    matrix                         shift and go to state 45
    unary_op                       shift and go to state 46
    fun                            shift and go to state 47
    var                            shift and go to state 51
    negation                       shift and go to state 53
    transposition                  shift and go to state 54
    fun_name                       shift and go to state 55

state 23

    (18) print -> PRINT . print_body
    (19) print_body -> . string
    (20) print_body -> . expression
    (21) print_body -> . string , print_body
    (22) print_body -> . expression , print_body
    (25) string -> . STRING
    (14) expression -> . comparison_expression
    (15) expression -> . numeric_expression
    (77) comparison_expression -> . numeric_expression LT numeric_expression
    (78) comparison_expression -> . numeric_expression GT numeric_expression
    (79) comparison_expression -> . numeric_expression EQ numeric_expression
    (80) comparison_expression -> . numeric_expression NE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . numeric_expression LE numeric_expression
    (83) comparison_expression -> . ( comparison_expression )
    (64) numeric_expression -> . num
    (65) numeric_expression -> . matrix
    (66) numeric_expression -> . unary_op
    (67) numeric_expression -> . fun
    (68) numeric_expression -> . ( numeric_expression )
    (69) numeric_expression -> . numeric_expression + numeric_expression
    (70) numeric_expression -> . numeric_expression - numeric_expression
    (71) numeric_expression -> . numeric_expression * numeric_expression
    (72) numeric_expression -> . numeric_expression / numeric_expression
    (73) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (74) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (75) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (76) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (57) num -> . INTNUM
    (58) num -> . FLOAT
    (59) num -> . var
    (30) matrix -> . [ matrix_body ]
    (31) matrix -> . [ ]
    (60) unary_op -> . negation
    (61) unary_op -> . transposition
    (35) fun -> . fun_name ( numeric_expression )
    (36) fun -> . fun_name ( error )
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (62) negation -> . - numeric_expression
    (63) transposition -> . numeric_expression '
    (37) fun_name -> . ZEROS
    (38) fun_name -> . ONES
    (39) fun_name -> . EYE

    STRING          shift and go to state 62
    (               shift and go to state 43
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 50
    [               shift and go to state 52
    ID              shift and go to state 18
    -               shift and go to state 48
    ZEROS           shift and go to state 56
    ONES            shift and go to state 57
    EYE             shift and go to state 58

    print_body                     shift and go to state 59
    string                         shift and go to state 60
    expression                     shift and go to state 61
    comparison_expression          shift and go to state 41
    numeric_expression             shift and go to state 42
    num                            shift and go to state 44
    matrix                         shift and go to state 45
    unary_op                       shift and go to state 46
    fun                            shift and go to state 47
    var                            shift and go to state 51
    negation                       shift and go to state 53
    transposition                  shift and go to state 54
    fun_name                       shift and go to state 55

state 24

    (46) assignment_lhs -> var .
    (56) var -> var . [ numeric_expression ]
    (34) array_range -> var . [ expression , expression ]

    =               reduce using rule 46 (assignment_lhs -> var .)
    ADDASSIGN       reduce using rule 46 (assignment_lhs -> var .)
    SUBASSIGN       reduce using rule 46 (assignment_lhs -> var .)
    MULASSIGN       reduce using rule 46 (assignment_lhs -> var .)
    DIVASSIGN       reduce using rule 46 (assignment_lhs -> var .)
    [               shift and go to state 63


state 25

    (47) assignment_lhs -> array_range .

    =               reduce using rule 47 (assignment_lhs -> array_range .)
    ADDASSIGN       reduce using rule 47 (assignment_lhs -> array_range .)
    SUBASSIGN       reduce using rule 47 (assignment_lhs -> array_range .)
    MULASSIGN       reduce using rule 47 (assignment_lhs -> array_range .)
    DIVASSIGN       reduce using rule 47 (assignment_lhs -> array_range .)


state 26

    (2) instructions -> instruction instructions .

    $end            reduce using rule 2 (instructions -> instruction instructions .)
    }               reduce using rule 2 (instructions -> instruction instructions .)


state 27

    (6) instruction -> statement ; .

    error           reduce using rule 6 (instruction -> statement ; .)
    {               reduce using rule 6 (instruction -> statement ; .)
    IF              reduce using rule 6 (instruction -> statement ; .)
    WHILE           reduce using rule 6 (instruction -> statement ; .)
    FOR             reduce using rule 6 (instruction -> statement ; .)
    BREAK           reduce using rule 6 (instruction -> statement ; .)
    CONTINUE        reduce using rule 6 (instruction -> statement ; .)
    RETURN          reduce using rule 6 (instruction -> statement ; .)
    PRINT           reduce using rule 6 (instruction -> statement ; .)
    ID              reduce using rule 6 (instruction -> statement ; .)
    $end            reduce using rule 6 (instruction -> statement ; .)
    }               reduce using rule 6 (instruction -> statement ; .)
    ELSE            reduce using rule 6 (instruction -> statement ; .)


state 28

    (7) instruction -> error ; .

    error           reduce using rule 7 (instruction -> error ; .)
    {               reduce using rule 7 (instruction -> error ; .)
    IF              reduce using rule 7 (instruction -> error ; .)
    WHILE           reduce using rule 7 (instruction -> error ; .)
    FOR             reduce using rule 7 (instruction -> error ; .)
    BREAK           reduce using rule 7 (instruction -> error ; .)
    CONTINUE        reduce using rule 7 (instruction -> error ; .)
    RETURN          reduce using rule 7 (instruction -> error ; .)
    PRINT           reduce using rule 7 (instruction -> error ; .)
    ID              reduce using rule 7 (instruction -> error ; .)
    $end            reduce using rule 7 (instruction -> error ; .)
    }               reduce using rule 7 (instruction -> error ; .)
    ELSE            reduce using rule 7 (instruction -> error ; .)


state 29

    (16) block -> { instructions . }

    }               shift and go to state 64


state 30

    (17) block -> { error . }
    (7) instruction -> error . ;

    }               shift and go to state 65
    ;               shift and go to state 28


state 31

    (44) conditional -> IF ( . expression ) instruction
    (45) conditional -> IF ( . expression ) instruction ELSE instruction
    (14) expression -> . comparison_expression
    (15) expression -> . numeric_expression
    (77) comparison_expression -> . numeric_expression LT numeric_expression
    (78) comparison_expression -> . numeric_expression GT numeric_expression
    (79) comparison_expression -> . numeric_expression EQ numeric_expression
    (80) comparison_expression -> . numeric_expression NE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . numeric_expression LE numeric_expression
    (83) comparison_expression -> . ( comparison_expression )
    (64) numeric_expression -> . num
    (65) numeric_expression -> . matrix
    (66) numeric_expression -> . unary_op
    (67) numeric_expression -> . fun
    (68) numeric_expression -> . ( numeric_expression )
    (69) numeric_expression -> . numeric_expression + numeric_expression
    (70) numeric_expression -> . numeric_expression - numeric_expression
    (71) numeric_expression -> . numeric_expression * numeric_expression
    (72) numeric_expression -> . numeric_expression / numeric_expression
    (73) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (74) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (75) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (76) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (57) num -> . INTNUM
    (58) num -> . FLOAT
    (59) num -> . var
    (30) matrix -> . [ matrix_body ]
    (31) matrix -> . [ ]
    (60) unary_op -> . negation
    (61) unary_op -> . transposition
    (35) fun -> . fun_name ( numeric_expression )
    (36) fun -> . fun_name ( error )
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (62) negation -> . - numeric_expression
    (63) transposition -> . numeric_expression '
    (37) fun_name -> . ZEROS
    (38) fun_name -> . ONES
    (39) fun_name -> . EYE

    (               shift and go to state 43
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 50
    [               shift and go to state 52
    ID              shift and go to state 18
    -               shift and go to state 48
    ZEROS           shift and go to state 56
    ONES            shift and go to state 57
    EYE             shift and go to state 58

    expression                     shift and go to state 66
    comparison_expression          shift and go to state 41
    numeric_expression             shift and go to state 42
    num                            shift and go to state 44
    matrix                         shift and go to state 45
    unary_op                       shift and go to state 46
    fun                            shift and go to state 47
    var                            shift and go to state 51
    negation                       shift and go to state 53
    transposition                  shift and go to state 54
    fun_name                       shift and go to state 55

state 32

    (42) while -> WHILE ( . expression ) instruction
    (14) expression -> . comparison_expression
    (15) expression -> . numeric_expression
    (77) comparison_expression -> . numeric_expression LT numeric_expression
    (78) comparison_expression -> . numeric_expression GT numeric_expression
    (79) comparison_expression -> . numeric_expression EQ numeric_expression
    (80) comparison_expression -> . numeric_expression NE numeric_expression
    (81) comparison_expression -> . numeric_expression GE numeric_expression
    (82) comparison_expression -> . numeric_expression LE numeric_expression
    (83) comparison_expression -> . ( comparison_expression )
    (64) numeric_expression -> . num
    (65) numeric_expression -> . matrix
    (66) numeric_expression -> . unary_op
    (67) numeric_expression -> . fun
    (68) numeric_expression -> . ( numeric_expression )
    (69) numeric_expression -> . numeric_expression + numeric_expression
    (70) numeric_expression -> . numeric_expression - numeric_expression
    (71) numeric_expression -> . numeric_expression * numeric_expression
    (72) numeric_expression -> . numeric_expression / numeric_expression
    (73) numeric_expression -> . numeric_expression DOTADD numeric_expression
    (74) numeric_expression -> . numeric_expression DOTSUB numeric_expression
    (75) numeric_expression -> . numeric_expression DOTMUL numeric_expression
    (76) numeric_expression -> . numeric_expression DOTDIV numeric_expression
    (57) num -> . INTNUM
    (58) num -> . FLOAT
    (59) num -> . var
    (30) matrix -> . [ matrix_body ]
    (31) matrix -> . [ ]
    (60) unary_op -> . negation
    (61) unary_op -> . transposition
    (35) fun -> . fun_name ( numeric_expression )
    (36) fun -> . fun_name ( error )
    (55) var -> . ID
    (56) var -> . var [ numeric_expression ]
    (62) negation -> . - numeric_expression
    (63) transposition -> . numeric_expression '
    (37) fun_name -> . ZEROS
    (38) fun_name -> . ONES
    (39) fun_name -> . EYE

    (               shift and go to state 43
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 50
    [               shift and go to state 52
    ID              shift and go to state 18
    -               shift and go to state 48
    ZEROS           shift and go to state 56
    ONES            shift and go to state 57
    EYE             shift and go to state 58

    expression                     shift and go to state 67
    comparison_expression          shift and go to state 41
    numeric_expression             shift and go to state 42
    num                            shift and go to state 44
    matrix                         shift and go to state 45
    unary_op                       shift and go to state 46
    fun                            shift and go to state 47
    var                            shift and go to state 51
    negation                       shift and go to state 53
    transposition                  shift and go to state 54
    fun_name                       shift and go to state 55

state 33

